add, modify products isn't complete

--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -129,8 +129,139 @@
     </div>
     end header -->
    <div class="row">
+    <div class="col-md-5" style="margin-top: 50px;margin-bottom:50px; margin-left: 30px">
+            <h4>Thêm sản phẩm mới vào hệ thống</h4><br>
+            <form action="/admin/producers/add" method="post">
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Mã sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProID" required="true" placeholder="Nhập mã sản phẩm">
+                    </div>
+                </div>
 
- 
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Tên sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProName" required="true" placeholder="Nhập tên sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Loại sản phẩm</label>
+                    <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
+                        <select class="input-select" name="catOption">
+                            {{#each Cate}}
+                                <option value={{CatID}} name={{CatID}}>{{CatName}}</option>
+                            {{/each}}
+                            
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Nhà sản xuất</label>
+                    <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
+                        <select class="input-select" name="produOption">
+                            {{#each Produ}}
+                                <option value={{ProduID}} name={{ProduID}}>{{ProduName}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Số lượng</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProQuantity" required="true" placeholder="Nhập số lượng sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Giá bán</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProPrice" required="true" placeholder="Nhập giá thành sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="exampleFormControlTextarea1">Mô tả sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <textarea class="form-control noresize" id="exampleFormControlTextarea1" rows="3" name="ProDes"></textarea>
+                    </div>
+                </div>
+                <input class="btn btn-success" style="float: right;margin-right: 50px; margin-top: 0px" type="Submit" name="Submit" value="Thêm">
+            </form>
+        </div>
+          {{!-- form modify --}}
+        <div class="col-md-5" style="margin-top: 50px;margin-bottom:50px;">
+             <h4>Sửa sản phẩm đã có trong hệ thống</h4><br>
+            <form action="/admin/producers/add" method="post">
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Mã sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <select class="input-select" name="productOption">
+                            {{#each ProId}}
+                                <option value={{ProID}} name={{ProID}}>{{ProID}}</option>
+                            {{/each}}   
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Tên sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProName" required="true" placeholder="Nhập tên sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Loại sản phẩm</label>
+                    <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
+                        <select class="input-select" name="catOption">
+                            {{#each Cate}}
+                                <option value={{CatID}} name={{CatID}}>{{CatName}}</option>
+                            {{/each}}
+                            
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label class="col-md-3 col-form-label">Nhà sản xuất</label>
+                    <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
+                        <select class="input-select" name="produOption">
+                            {{#each Produ}}
+                                <option value={{ProduName}} name={{ProduName}}>{{ProduName}}</option>
+                            {{/each}}
+                        </select>
+                    </div>
+                </div>
+                <br>
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Số lượng</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProQuantity" required="true" placeholder="Nhập số lượng sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Giá bán</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="ProPrice" required="true" placeholder="Nhập giá thành sản phẩm">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label class="col-md-4 col-form-label" for="exampleFormControlTextarea1">Mô tả sản phẩm</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <textarea class="form-control noresize" id="exampleFormControlTextarea1" rows="3" name="ProDes"></textarea>
+                    </div>
+                </div>
+                <input class="btn btn-success" style="float: right;margin-right:50px; margin-top: 0px" type="Submit" name="Submit" value="Sửa">
+            </form>
+        </div>
+    </div>
+
    <div class="container-fluid">
             <div class="card card-container">
                 {{#each loadByProducts}}
