update final admin products

--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -204,13 +204,13 @@
           {{!-- form modify --}}
         <div class="col-md-5" style="margin-top: 50px;margin-bottom:50px;">
              <h4>Sửa sản phẩm đã có trong hệ thống</h4><br>
-            <form action="/admin/producers/add" method="post">
+            <form action="/admin/products/modifyPro" method="post">
                 <div class="form-group row">
                     <label class="col-md-4 col-form-label">Mã sản phẩm</label>
                     <div class="col-sm-7 col-md-7 col-lg-7">
-                        <select class="input-select" name="productOption">
+                        <select class="input-select" name="ProID">
                             {{#each ProId}}
-                                <option value={{ProID}} name={{ProID}}>{{ProID}}</option>
+                                <option value={{ProID}}>{{ProID}}</option>
                             {{/each}}   
                         </select>
                     </div>
@@ -226,9 +226,9 @@
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label">Loại sản phẩm</label>
                     <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
-                        <select class="input-select" name="catOption">
+                        <select class="input-select" name="CatID">
                             {{#each Cate}}
-                                <option value={{CatID}} name={{CatID}}>{{CatName}}</option>
+                                <option value={{CatID}} >{{CatName}}</option>
                             {{/each}}
                             
                         </select>
@@ -238,9 +238,9 @@
                 <div class="form-group row">
                     <label class="col-md-3 col-form-label">Nhà sản xuất</label>
                     <div class="col-sm-1 col-md-1 col-lg-1" style="margin-left: 50px">
-                        <select class="input-select" name="produOption">
+                        <select class="input-select" name="ProduID">
                             {{#each Produ}}
-                                <option value={{ProduName}} name={{ProduName}}>{{ProduName}}</option>
+                                <option value={{ProduID}} >{{ProduName}}</option>
                             {{/each}}
                         </select>
                     </div>
@@ -249,21 +249,27 @@
                 <div class="form-group row">
                     <label class="col-md-4 col-form-label">Số lượng</label>
                     <div class="col-sm-7 col-md-7 col-lg-7">
-                        <input class="form-control" style="width: 100%;" type="text" name="ProQuantity" required="true" placeholder="Nhập số lượng sản phẩm">
+                        <input class="form-control" style="width: 100%;" type="text" name="Quantity" required="true" placeholder="Nhập số lượng sản phẩm">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-md-4 col-form-label">Giá bán</label>
                     <div class="col-sm-7 col-md-7 col-lg-7">
-                        <input class="form-control" style="width: 100%;" type="text" name="ProPrice" required="true" placeholder="Nhập giá thành sản phẩm">
+                        <input class="form-control" style="width: 100%;" type="text" name="Price" required="true" placeholder="Nhập giá thành sản phẩm">
                     </div>
                 </div>
 
                 <div class="form-group row">
                     <label class="col-md-4 col-form-label" for="exampleFormControlTextarea1">Mô tả sản phẩm</label>
                     <div class="col-sm-7 col-md-7 col-lg-7">
-                        <textarea class="form-control noresize" id="exampleFormControlTextarea1" rows="3" name="ProDes"></textarea>
+                        <textarea class="form-control noresize" id="exampleFormControlTextarea1" rows="3" name="Des"></textarea>
+                    </div>
+                </div>
+                   <div class="form-group row">
+                    <label class="col-md-4 col-form-label">Ngày nhập kho</label>
+                    <div class="col-sm-7 col-md-7 col-lg-7">
+                        <input class="form-control" style="width: 100%;" type="text" name="AddDate" required="true" placeholder="Ngày nhập kho">
                     </div>
                 </div>
                 <input class="btn btn-success" style="float: right;margin-right:50px; margin-top: 0px" type="Submit" name="Submit" value="Sửa">
@@ -327,12 +333,15 @@
                     <th scope="col">Lượt bán</th>
                     <th scope="col">Lượt xem</th>
                     <th scope="col">Ngày thêm</th>
+                    <th scope="col"></th>
                 </tr>
             </thead>
             <tbody>
                 {{#each Item}}
                 <tr>
+                    <form action="/admin/products/delete" method="POST">
                     <td>{{ProID}}</td>
+                     <input type="hidden" name="id" value="{{ProID}}">
                     <td>{{ProName}}</td>    
                     <td>{{CatName}}</td>
                     <td>{{ProduName}}</td>
@@ -341,6 +350,8 @@
                     <td>{{Sales}}</td>
                     <td>{{Views}}</td>
                     <td>{{AddDate}}</td>
+                    <td><input class="btn btn-success" style="float: right; ; margin-top:0px" type="Submit" name="Submit" value="Xóa" ></td>
+                    </form>
                 </tr>
                 {{/each}}
             </tbody>
