--- a/Back-end/views/search/result.hbs
+++ b/Back-end/views/search/result.hbs
@@ -36,28 +36,28 @@
 				<h4>Hãng sản xuất</h4>
 					<select class="input-select" name="optionProdu">
 						<option value="all">Tất cả</option>
-						<option value="Asus">Asus</option>
-						<option value="Dell">Dell</option>
-						<option value="Mac">Mac</option>
-						<option value="MSI">MSI</option>
+						<option value="Asus">Laptop Asus</option>
+						<option value="Dell">Laptop Dell</option>
+						<option value="Mac">Laptop Macbook</option>
+						<option value="MSI">Laptop MSI</option>
 					</select>
 					<h4>Loại laptop</h4>
 					<select class="input-select" name="optionCat">
 						<option value="all">Tất cả</option>
-						<option value="Laptop Gaming">Laptop Gaming</option>
-						<option value="Laptop Văn phòng">Laptop Văn phòng</option>
-						<option value="Laptop Doanh nhân">Laptop Doanh nhân</option>
-						<option value="Laptop Ultrabook">Laptop Ultrabook</option>
+						<option value="Laptop Gaming">Lap Gaming</option>
+						<option value="Laptop Văn phòng">Lap Văn phòng</option>
+						<option value="Laptop Doanh nhân">Lap Doanh nhân</option>
+						<option value="Laptop Ultrabook">Lap Ultrabook</option>
 					</select>
 					<h4>Mức giá</h4>
 					<select class="input-select" name="optionPrice">
 						<option value="100000000">Tất cả</option>
-						<option value="20000000">10-20 triệu</option>
-						<option value="30000000">20-30 triệu</option>
-						<option value="40000000">30-40 triệu</option>
-						<option value="50000000">40-50 triệu</option>
+						<option value="20000000">10-20 triệu đồng</option>
+						<option value="30000000">20-30 triệu đồng</option>
+						<option value="40000000">30-40 triệu đồng</option>
+						<option value="50000000">40-50 triệu đồng</option>
 					</select>
-					<button class="search-btn" type="submit" style="margin-top:50px">Tìm kiếm</button>
+					<button class="primary-btn order-submit" type="submit" style="margin-top:50px">Tìm kiếm</button>
 				</form>
 			</div>
 		</div>
@@ -97,6 +97,7 @@
 			</div>
 		</a>
 	</div>
+	
 	<!-- /product -->
 	{{/each}}
 </div>
