--- a/Back-end/views/account/register.hbs
+++ b/Back-end/views/account/register.hbs
@@ -43,17 +43,17 @@
             
              <form action="" method="POST" class="form-horizontal" role="form" onsubmit="return validate();">
               
-                        <input type="text" id="txtUsername" placeholder="Tên đăng nhập" name="username">
+                        <input type="text" id="txtUsername" placeholder="Tên đăng nhập" name="username" required autofocus>
                    
-                        <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">
+                        <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD" required>
                    
-                        <input type="password"  id="txtCPWD" placeholder="Nhập lại password" name="cPWD">
+                        <input type="password"  id="txtCPWD" placeholder="Nhập lại password" name="cPWD" required>
                     
-                        <input type="text"  id="txtName" placeholder="Họ tên" name="name">
+                        <input type="text"  id="txtName" placeholder="Họ tên" name="name" required>
                     
-                        <input type="text"  id="txtEmail" placeholder="Email" name="email">
+                        <input type="text"  id="txtEmail" placeholder="Email" name="email" required>
                     
-                        <input type="text"  id="txtDOB" placeholder="d/m/yyyy" name="dob">
+                        <input type="text"  id="txtDOB" placeholder="d/m/yyyy" name="dob" required>
                     
                   
                      <div class="g-recaptcha" data-sitekey="6LevCWEUAAAAALEciD1YVK9PzI89okEBoHXQb2T2"></div>
