--- a/Back-end/views/admin/admin.hbs
+++ b/Back-end/views/admin/admin.hbs
@@ -95,7 +95,7 @@
 
                     <li>
                         <a href="/admin/orders">
-                            <i class="menu-icon ti-email"></i>Tình trạng đơn hàng</a>
+                            <i class="menu-icon ti-email"></i><span style="color:black ;font-weight: bold">Tình trạng đơn hàng</span></a>
                     </li>
 
 
