--- a/Back-end/views/admin/byOrderAdmin.hbs
+++ b/Back-end/views/admin/byOrderAdmin.hbs
@@ -109,7 +109,7 @@
 
                     <li>
                         <a href="/admin/orders">
-                            <i class="menu-icon ti-email"></i>Tình trạng đơn hàng</a>
+                            <i class="menu-icon ti-email"></i><span style="color:black ;font-weight: bold">Tình trạng đơn hàng</span></a>
                     </li>
 
 
@@ -153,7 +153,7 @@
                             
                             <td>
                                 <a data-status="{{Status}}" href="javascript:;" class=" addItem">
-                                                <button type="submit" >Đã giao</button>
+                                                <button type="submit"  class="btn btn-success">Đã giao</button>
                                             </a>
                             
                             </td>
@@ -164,7 +164,7 @@
                             
                             <td>
                                 <a data-status1="{{Status}}" href="javascript:;" class=" addItem">
-                                                <button type="submit" >Chưa giao</button>
+                                                <button class="btn btn-success" type="submit" >Chưa giao</button>
                                             </a>
                             
                             </td>
