--- a/Back-end/views/admin/dashboard.hbs
+++ b/Back-end/views/admin/dashboard.hbs
@@ -95,7 +95,7 @@
 
                     <li>
                         <a href="/admin/orders">
-                            <i class="menu-icon ti-email"></i>Tình trạng đơn hàng</a>
+                            <i class="menu-icon ti-email"></i><span style="color:black ;font-weight: bold">Tình trạng đơn hàng</span></a>
                     </li>
 
 
@@ -106,7 +106,7 @@
     </aside>
     
     <div class="row">      
-        <div class="col-lg-12">
+        <div class="col-lg-12 text-center" style="margin-top:100px">
             <a data-asus="{{Asus.Sold}}" 
             data-dell="{{Dell.Sold}}"  
             data-mac="{{Mac.Sold}}"
@@ -115,12 +115,12 @@
             data-dn="{{DN.Sold}}" 
             data-g="{{Gaming.Sold}}" 
             data-ul="{{Ultra.Sold}}" 
-            class=" add"><button >Xem biểu đồ</button></a>
+            class=" add"><button class="btn btn-success"  >Xem biểu đồ</button></a>
             
-            <a href="/admin/products"><button >Xem sản phẩm</button></a>
-            <a href="/admin/producers"><button >Xem theo nhà sản xuất</button></a>
-            <a href="/admin/categories"><button >Xem theo loại sản phẩm</button></a>
-            <a href="/admin/orders"><button >Xem tình trạng đơn hàng</button></a>
+            <a href="/admin/products"><button class="btn btn-success" >Xem sản phẩm</button></a>
+            <a href="/admin/producers"><button class="btn btn-success" >Xem theo nhà sản xuất</button></a>
+            <a href="/admin/categories"><button class="btn btn-success" >Xem theo loại sản phẩm</button></a>
+            <a href="/admin/orders"><button class="btn btn-success" >Xem tình trạng đơn hàng</button></a>
             
             <div class="col-lg-6">
                 <div id="piechart" ></div>
