--- a/Back-end/views/account/login.hbs
+++ b/Back-end/views/account/login.hbs
@@ -17,8 +17,8 @@
       <div class="left">
         <h1 class="h1">Sign in</h1>
         <form class="form-horizontal" method="post" action="" id="frmLogin">  
-          <input type="text"  id="txtUsername" placeholder="Tên đăng nhập" name="username">
-          <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD">                         
+          <input type="text"  id="txtUsername" placeholder="Tên đăng nhập" name="username" required autofocus>
+          <input type="password"  id="txtPWD" placeholder="Password" name="rawPWD" required>                         
           <label>
               <input type="checkbox" name="remember">
               Remember
